# tools

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
.github/workflows/: bump-version.yml  deploy.yml  test.yml  version-bump.yml
examples/: README.md  s3.py  simple_langchain_test.py
src/agentic_tools/: __init__.py
src/agentic_tools/config/: config.py
src/agentic_tools/service/: __init__.py  scade.py
src/agentic_tools/toolkit/: __init__.py  agentic_hub_toolkit.py
src/agentic_tools/tools/: __init__.py
src/generator/: class_generator.py  generator_engine.py  test_generator.py
src/generator/engine_config/: scade-tools-nodes-base.Brandfetch.json  scade-tools-nodes-base.actionNetwork.json  scade-tools-nodes-base.activeCampaign.json  scade-tools-nodes-base.activeCampaignTrigger.json  scade-tools-nodes-base.acuitySchedulingTrigger.json  scade-tools-nodes-base.adalo.json  scade-tools-nodes-base.affinity.json  scade-tools-nodes-base.affinityTrigger.json  scade-tools-nodes-base.aggregate.json  scade-tools-nodes-base.agileCrm.json  scade-tools-nodes-base.airtable.json  scade-tools-nodes-base.airtableTrigger.json  scade-tools-nodes-base.amqp.json  scade-tools-nodes-base.amqpTrigger.json  scade-tools-nodes-base.apiTemplateIo.json  scade-tools-nodes-base.asana.json  scade-tools-nodes-base.asanaTrigger.json  scade-tools-nodes-base.automizy.json  scade-tools-nodes-base.autopilot.json  scade-tools-nodes-base.autopilotTrigger.json  scade-tools-nodes-base.awsComprehend.json  (+387 more)
tests/: test_example.py
tmp/: generator_class.py  new_generator_engine.py
(+3 files in other folders)
