[tool.poetry]
name = "agentic_tools"
version = "0.1.0"
description = "A description of your project"
authors = ["Pavel Pantiukhov <pantiukhov.p@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9"
# Add your project dependencies here
# e.g., requests = "^2.25.1"
langchain = "^0.3.19"
aiohttp = "^3.9.1"
python-dotenv = "^1.0.0"
langchain-openai = "0.0.1"
langchain-community = "^0.3.18"

[tool.poetry.dev-dependencies]
# Add your development dependencies here
# e.g., pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"